src/test/deca/syntax/valid/while.deca
{
<<<<<<< HEAD
    while(true){
        
=======
    int i = 1 ;
    while ( i == 1 && i == 3 && i == 4 ) {
        i = 0 ;
>>>>>>> d9cef92535a4513a09485fab546495679e412a78
    }
}