src/test/deca/syntax/invalid/created/icomplete-while.deca
//icomplete-while.deca:5:1: missing '}' at '<EOF>'
{
    while(true){
}